﻿Add Official website to ArgoCD Application.