@@ -4,49 +4,49 @@ configs:
   ## Creates a secret for each key/value specified below to create repositories
   ## Note: the last example in the list would use a repository credential template,
   # configured under "configs.repositoryCredentials".
-  repositories:
-    sk-table:
-      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppTable.git
-      name: sk-table
-      type: git
-      password: my-password
-      username: my-username
-    sk-file:
-      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppFile.git
-      name: sk-file
-      type: git
-      password: my-password
-      username: my-username
-    sk-user:
-      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppUser.git
-      name: sk-user
-      type: git
-      password: my-password
-      username: my-username
-    sk-backstage:
-      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppBackstage.git
-      name: sk-backstage
-      type: git
-      password: my-password
-      username: my-username
-    sk-battle:
-      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppBattle.git
-      name: sk-battle
-      type: git
-      password: my-password
-      username: my-username
-    sk-nft:
-      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppNFT.git
-      name: sk-nft
-      type: git
-      password: my-password
-      username: my-username
-    sk-official-web:
-      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppOfficialWebsite.git
-      name: sk-official-web
-      type: git
-      password: my-password
-      username: my-username
+  repositories: {}
+#    sk-table:
+#      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppTable.git
+#      name: sk-table
+#      type: git
+#      password: my-password
+#      username: my-username
+#    sk-file:
+#      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppFile.git
+#      name: sk-file
+#      type: git
+#      password: my-password
+#      username: my-username
+#    sk-user:
+#      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppUser.git
+#      name: sk-user
+#      type: git
+#      password: my-password
+#      username: my-username
+#    sk-backstage:
+#      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppBackstage.git
+#      name: sk-backstage
+#      type: git
+#      password: my-password
+#      username: my-username
+#    sk-battle:
+#      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppBattle.git
+#      name: sk-battle
+#      type: git
+#      password: my-password
+#      username: my-username
+#    sk-nft:
+#      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppNFT.git
+#      name: sk-nft
+#      type: git
+#      password: my-password
+#      username: my-username
+#    sk-official-web:
+#      url: https://gitlab.com/GameSnake/SRE/ArgoCDAppOfficialWebsite.git
+#      name: sk-official-web
+#      type: git
+#      password: my-password
+#      username: my-username
     
     #  repositories: { }
     # istio-helm-repo:
